# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")

generate_static_abc("base_sdk") {
  base_url = "./ets"

  files = [ "./ets/@ohos.base.ets" ]

  is_boot_abc = "True"
  device_dst_file = "/system/framework/base_sdk.abc"
}

ohos_prebuilt_etc("base_sdk_ets") {
  source = "$target_out_dir/base_sdk.abc"
  deps = [ ":base_sdk" ]
  module_install_dir = "framework"
  subsystem_name = "commonlibrary"
  part_name = "ets_utils"
}

generate_static_abc("base_transfer") {
  base_url = "./transfer"
  files = [
    "./transfer/@ohos.transfer.ets",
    "./transfer/register.ets",
    "./transfer/kitRegister/arkts.ets",
    "./transfer/kitRegister/registerMain.ets",
    "./transfer/kitRegister/abilitykit.ets",
    "./transfer/kitRegister/arkui.ets",
    "./transfer/kitRegister/arkts.ets",
    "./transfer/kitRegister/arkweb.ets",
    "./transfer/kitRegister/registerMain.ets",
    "./transfer/kitRegister/resourceManager.ets",
    "./transfer/kitRegister/basicServicesKit.ets",
    "./transfer/kitRegister/osAccount.ets",
    "./transfer/kitRegister/window.ets",
    "./transfer/kitRegister/display.ets",
    "./transfer/kitRegister/screen.ets",
    "./transfer/kitRegister/imageKit.ets",
    "./transfer/kitRegister/cameraKit.ets",
    "./transfer/kitRegister/pasteboard.ets",
    "./transfer/kitRegister/effectKit.ets",
    "./transfer/kitRegister/scene3d.ets",
    "./transfer/kitRegister/mediaLibraryKit.ets",
    "./transfer/kitRegister/drawing.ets",
    "./transfer/kitRegister/rpc.ets",
  ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/base_transfer.abc"
}

ohos_prebuilt_etc("base_transfer_ets") {
  source = "$target_out_dir/base_transfer.abc"
  module_install_dir = "framework"
  subsystem_name = "commonlibrary"
  part_name = "ets_utils"
  deps = [ ":base_transfer" ]
}
