# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//build/config/clang/clang.gni")

is_ohos_standard_system = is_standard_system && !is_arkui_x
if (is_ohos_standard_system && product_name == "ohos-sdk") {
  if (is_mac) {
    dylib_suffix = ".dylib"
  } else if (is_linux) {
    dylib_suffix = ".so"
  } else {
    dylib_suffix = ".dll"
  }

  # All dynamic libraries to be copied to path "/previewer/common/bin/",
  # which are related to previewer, can be added to this script.
  ets_utils_bin_util = [
    {
      label = "//commonlibrary/ets_utils/js_util_module/json:json"
      lib_names = [ "json" ]
      part_name = "ets_utils"
      subsystem_name = "commonlibrary"
    },
  ]

  ets_utils_bin_arkts = [
    {
      label = "//commonlibrary/ets_utils/js_util_module/collections:collections"
      lib_names = [ "collections" ]
      part_name = "ets_utils"
      subsystem_name = "commonlibrary"
    },
  ]

  not_needed("*", [ "dylib_suffix" ])

  ohos_copy("copy_previewer_debug_util") {
    public_deps = []
    sources = []
    foreach(item, ets_utils_bin_util) {
      public_deps += [ item.label ]
      out_path = get_label_info(item.label, "root_out_dir")
      lib_names = []
      if (defined(item.lib_names)) {
        lib_names += item.lib_names
      } else {
        lib_names +=
            [ string_replace(get_label_info(item.label, "name"), "lib", "", 1) ]
      }
      foreach(lib_name, lib_names) {
        sources += [ "${out_path}/commonlibrary/ets_utils/lib${lib_name}${dylib_suffix}" ]
      }
    }

    outputs = [ target_out_dir + "/previewer/common/bin/module/util/{{source_file_part}}" ]
    module_source_dir = target_out_dir + "/previewer/common/bin/module/util/"
    module_install_name = ""
  }

  ohos_copy("copy_previewer_debug_arkts") {
    public_deps = []
    sources = []
    foreach(item, ets_utils_bin_arkts) {
      public_deps += [ item.label ]
      out_path = get_label_info(item.label, "root_out_dir")
      lib_names = []
      if (defined(item.lib_names)) {
        lib_names += item.lib_names
      } else {
        lib_names += [ string_replace(get_label_info(item.label, "name"), "lib", "", 1) ]
      }
      foreach(lib_name, lib_names) {
        sources += [ "${out_path}/commonlibrary/ets_utils/lib${lib_name}${dylib_suffix}" ]
      }
    }

    outputs = [ target_out_dir + "/previewer/common/bin/module/arkts/{{source_file_part}}" ]
    module_source_dir = target_out_dir + "/previewer/common/bin/module/arkts/"
    module_install_name = ""
  }
}

generate_static_abc("base_sdk") {
  base_url = "./ets"

  files = [ "./ets/@ohos.base.ets" ]

  is_boot_abc = "True"
  device_dst_file = "/system/framework/base_sdk.abc"
}

ohos_prebuilt_etc("base_sdk_ets") {
  source = "$target_out_dir/base_sdk.abc"
  deps = [ ":base_sdk" ]
  module_install_dir = "framework"
  subsystem_name = "commonlibrary"
  part_name = "ets_utils"
}

generate_static_abc("base_transfer") {
  base_url = "./transfer"
  files = [
    "./transfer/@ohos.transfer.ets",
    "./transfer/register.ets",
    "./transfer/kitRegister/abilitykit.ets",
    "./transfer/kitRegister/arkGraphics2D.ets",
    "./transfer/kitRegister/arkui.ets",
    "./transfer/kitRegister/arkts.ets",
    "./transfer/kitRegister/arkweb.ets",
    "./transfer/kitRegister/registerMain.ets",
    "./transfer/kitRegister/resourceManager.ets",
    "./transfer/kitRegister/basicServicesKit.ets",
    "./transfer/kitRegister/osAccount.ets",
    "./transfer/kitRegister/ipc.ets",
    "./transfer/kitRegister/window.ets",
    "./transfer/kitRegister/scene3d.ets",
    "./transfer/kitRegister/imageKit.ets",
    "./transfer/kitRegister/pasteboard.ets",
    "./transfer/kitRegister/cameraKit.ets",
    "./transfer/kitRegister/display.ets",
    "./transfer/kitRegister/screen.ets",
    "./transfer/kitRegister/mediaLibraryKit.ets",
    "./transfer/kitRegister/udmf.ets",
    "./transfer/kitRegister/coreFileKitBackup.ets",
    "./transfer/kitRegister/effectKit.ets",
    "./transfer/kitRegister/drawing.ets",
  ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/base_transfer.abc"
}

ohos_prebuilt_etc("base_transfer_ets") {
  source = "$target_out_dir/base_transfer.abc"
  module_install_dir = "framework"
  subsystem_name = "commonlibrary"
  part_name = "ets_utils"
  deps = [ ":base_transfer" ]
}
