# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//commonlibrary/ets_utils/ets_utils_config.gni")

ohos_prebuilt_etc("commonlib_ets_utils") {
  source = "$target_out_dir/commonlib_ets_utils.abc"
  module_install_dir = "framework"
  subsystem_name = "commonlibrary"
  part_name = "ets_utils"
  deps = [ ":ets2abc_commonsdk" ]
}

generate_static_abc("ets2abc_commonsdk") {
  arktsconfig = "$ets_util_path/sdk/arktsconfig.json"
  dst_file = "$target_out_dir/commonlib_ets_utils.abc"
  out_puts = [ "$target_out_dir/commonlib_ets_utils.abc" ]
  cache_path = "$target_out_dir/cache"
  is_boot_abc = "True"
  device_dst_file = "/system/framework/commonlib_ets_utils.abc"
}

ets_util_sources = [
  "$ets_util_path/sdk/native/api/ani_textdecoder.cpp",
  "$ets_util_path/sdk/native/main.cpp",
]

ohos_shared_library("commonlib_ets_ani") {
  include_dirs = [ ets_util_path ]

  configs = []
  sources = ets_util_sources

  external_deps = [
    "icu:shared_icuuc",
    "openssl:libcrypto_shared",
    "runtime_core:ani",
  ]
  if (is_standard_system) {
    external_deps += [ "hilog:libhilog" ]
  } else {
    external_deps += [
      "c_utils:utils",
      "hilog:libhilog",
    ]
  }
  external_deps += [ "bounds_checking_function:libsec_shared" ]

  part_name = "ets_utils"
  subsystem_name = "commonlibrary"
  output_extension = "so"
}

group("commonlib_sdk") {
  deps = [
    ":commonlib_ets_ani",
    ":commonlib_ets_ani(${host_toolchain})",
    ":commonlib_ets_utils",
  ]
}
